[gd_scene load_steps=18 format=3 uid="uid://cwfahle4ha0uq"]

[ext_resource type="Script" uid="uid://dwqwn0yq03m0" path="res://src/Scripts/player.gd" id="1_qw5p0"]
[ext_resource type="Script" uid="uid://crac21w6f0oy2" path="res://src/Scripts/camera.gd" id="2_lxwd3"]
[ext_resource type="Texture2D" uid="uid://1qkf0wxayb7f" path="res://CrosshairTest.png" id="2_t5wo0"]
[ext_resource type="Script" uid="uid://el3ur7a8rggo" path="res://src/Scripts/reticle.gd" id="3_lxwd3"]
[ext_resource type="PackedScene" uid="uid://de75lun6r25ey" path="res://src/Scenes/HUD/alert_arrow.tscn" id="4_iqpho"]
[ext_resource type="PackedScene" uid="uid://cs8p3p1woyr7q" path="res://src/Scenes/Player/Weapons/Pistol.tscn" id="5_t5wo0"]

[sub_resource type="Animation" id="Animation_lxwd3"]
resource_name = "HideArm"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disable_movement"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.135, -0.6), Vector3(0.7, -0.6, -1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Pistol:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5707964, 0, 0)]
}

[sub_resource type="Animation" id="Animation_waosb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, -0.5, -0.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5707964, 0, 0)]
}

[sub_resource type="Animation" id="Animation_t5wo0"]
resource_name = "ShowArm"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_movement"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.7, -0.6, -1), Vector3(0.4, 0.135, -0.6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Pistol:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5707964, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_iqpho"]
resource_name = "SwapWeapons"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_movement"
}, {
"args": [],
"method": &"enable_movement"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.4, 0.135, -0.6), Vector3(0.7, -0.6, -1), Vector3(0.4, 0.135, -0.6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Pistol:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.5707964, 0, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"disable_shooting"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Pistol")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_weapon_visual"
}]
}

[sub_resource type="Animation" id="Animation_f8bxg"]
resource_name = "shoot_pistol"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/GunArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.09931809, 0, -0.101154566), Vector3(0.09931809, 0, 0.14831007), Vector3(0.09931809, 0, -0.101154566)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhadf"]
_data = {
&"HideArm": SubResource("Animation_lxwd3"),
&"RESET": SubResource("Animation_waosb"),
&"ShowArm": SubResource("Animation_t5wo0"),
&"SwapWeapons": SubResource("Animation_iqpho"),
&"shoot_pistol": SubResource("Animation_f8bxg")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_630vu"]
albedo_color = Color(0.45840502, 0.45840508, 0.45840502, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nuidu"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8bxg"]
albedo_color = Color(0.72914034, 0.48635185, 0.313854, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]
radius = 1.737
height = 14.648

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_waosb"]
radius = 0.7167969
height = 4.685669

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_qw5p0")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 6.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vhadf")
}

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -0.566)

[node name="Camera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.055753767, 0, 0)
current = true
fov = 50.0
script = ExtResource("2_lxwd3")

[node name="GunArm" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, 0.9999999, 0, -0.9999999, -4.3711385e-08, 0.09931809, 0, -0.101154566)
visible = false

[node name="Pistol" type="CSGBox3D" parent="Head/GunArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100782424, -0.108855054, -0.4538074)
material_override = SubResource("StandardMaterial3D_630vu")
size = Vector3(0.11031532, 0.12391305, 0.29129267)

[node name="Hand" type="CSGBox3D" parent="Head/GunArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.100782424, -0.22084074, -0.37810755)
material_override = SubResource("StandardMaterial3D_nuidu")
size = Vector3(0.11031532, 0.10052872, 0.10377884)

[node name="Arm" type="CSGBox3D" parent="Head/GunArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.10118011, -0.22526388, -0.10076362)
material_override = SubResource("StandardMaterial3D_f8bxg")
size = Vector3(0.08564758, 0.07984924, 0.6223526)

[node name="Pistol" parent="Head" instance=ExtResource("5_t5wo0")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 1, -0.5, -0.6)

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
transform = Transform3D(0.34652677, 0, 0, 0, 0.31030542, 0, 0, 0, 0.33825758, 0, 2.3098607, -0.530756)
mesh = SubResource("CapsuleMesh_sh265")

[node name="Crosshair" type="CanvasLayer" parent="."]

[node name="Reticle" type="TextureRect" parent="Crosshair"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t5wo0")
script = ExtResource("3_lxwd3")
metadata/_edit_use_anchors_ = true

[node name="AlertArrow" parent="Crosshair" instance=ExtResource("4_iqpho")]
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 15.0
offset_top = -83.0
offset_right = 61.0
offset_bottom = 83.0
grow_horizontal = 1
metadata/_edit_use_anchors_ = true

[node name="AlertArrow2" parent="Crosshair" instance=ExtResource("4_iqpho")]
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_top = -76.0
offset_right = -15.0
offset_bottom = 101.0
grow_horizontal = 0
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="AlertArrow3" parent="Crosshair" instance=ExtResource("4_iqpho")]
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 101.0
offset_top = -52.0
offset_right = 147.0
offset_bottom = 158.36554
grow_vertical = 0
rotation = 1.5707964
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="AlertArrow4" parent="Crosshair" instance=ExtResource("4_iqpho")]
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 76.6236
offset_top = 9.999996
offset_right = 122.6236
offset_bottom = 189.57806
grow_vertical = 1
rotation = 1.5707964
metadata/_edit_use_anchors_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4682698, -0.530756)
shape = SubResource("CapsuleShape3D_waosb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]

[editable path="Head/Pistol"]
